@@ -367,6 +367,7 @@
         <value condition="!String.IsEmpty(ListItem.Label)">$INFO[ListItem.Label]</value>
         <value condition="!String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Title))">$INFO[Window(Home).Property(SkinHelper.ListItem.Title)]</value>
         <value condition="!String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Label))">$INFO[Window(Home).Property(SkinHelper.ListItem.Label)]</value>
+        <value>$LOCALIZE[31380]</value>
     </variable>
 
     <variable name="Label_OverlayPlot">
