@@ -352,6 +352,22 @@
                             <enable>Skin.HasSetting(EnableBlur) + System.HasAddon(script.colorbox)</enable>
                         </control>
 
+                        <control type="radiobutton" id="9927" description="Poster Back Gradient">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31375]</label>
+                            <selected>Skin.HasSetting(PosterBackGradient)</selected>
+                            <onclick>Skin.ToggleSetting(PosterBackGradient)</onclick>
+                        </control>
+
+                        <control type="radiobutton" id="9926" description="Shadows">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31318]</label>
+                            <selected>!Skin.HasSetting(DisableShadows)</selected>
+                            <onclick>Skin.ToggleSetting(DisableShadows)</onclick>
+                        </control>
+
                         <control type="button" id="9654">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
                             <label>$LOCALIZE[31321]</label>
@@ -595,14 +611,6 @@
                             <include>Defs_Settings_Button</include>
                         </control>
 
-                        <!-- <control type="radiobutton" id="9876" description="Alphabet Strip">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9104)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31026]</label>
-                            <selected>Skin.HasSetting(AlphabetStrip)</selected>
-                            <onclick>Skin.ToggleSetting(AlphabetStrip)</onclick>
-                        </control> -->
-
                         <control type="radiobutton" id="9891" description="Enable View Text">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9104)</visible>
                             <include>Defs_Settings_Button</include>
@@ -635,6 +643,14 @@
                             <onclick>Skin.ToggleSetting(LightWatchedOverlay)</onclick>
                         </control>
 
+                        <control type="radiobutton" id="9779" description="Plot overlay">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9104)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31379]</label>
+                            <selected>Skin.HasSetting(AutoPlotOverlay)</selected>
+                            <onclick>Skin.ToggleSetting(AutoPlotOverlay)</onclick>
+                        </control>
+
                         <control type="button" id="9279" description="Enable viewmodes">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9104)</visible>
                             <include>Defs_Settings_Button</include>
@@ -648,6 +664,8 @@
                             <label>$LOCALIZE[31312]</label>
                             <onclick>ActivateWindow(1118)</onclick>
                         </control>
+
+                        
 
                         <!-- ============= -->
                         <!-- Miscellaneous -->
@@ -708,21 +726,14 @@
                             <onclick>Skin.ToggleSetting(BounceAnimations)</onclick>
                         </control>
 
-                        <control type="radiobutton" id="9927" description="Poster Back Gradient">
+                        <control type="radiobutton" id="9876" description="Alphabet Strip">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
                             <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31375]</label>
-                            <selected>Skin.HasSetting(PosterBackGradient)</selected>
-                            <onclick>Skin.ToggleSetting(PosterBackGradient)</onclick>
+                            <label>$LOCALIZE[31026]</label>
+                            <selected>Skin.HasSetting(AlphabetStrip)</selected>
+                            <onclick>Skin.ToggleSetting(AlphabetStrip)</onclick>
                         </control>
-
-                        <control type="radiobutton" id="9926" description="Shadows">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31318]</label>
-                            <selected>!Skin.HasSetting(DisableShadows)</selected>
-                            <onclick>Skin.ToggleSetting(DisableShadows)</onclick>
-                        </control>
+                        
 
                          <control type="button" id="9271" description="Startup Video">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
