@@ -1,3 +1,6 @@
+[B]0.9.18[/B]
+Plot overlay delay option
+
 [B]0.9.17[/B]
 Change user rating to star icon
 Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
